--- a/package.json
+++ b/package.json
@@ -1,41 +1,60 @@
 {
-  "name": "sanical-chat",
-  "version": "1.0.0",
-  "description": "",
-  "private": "true",
-  "scripts": {
-    "start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack serve --config config/webpack.prod.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@hotwired/stimulus": "^3.0.1",
-    "@hotwired/stimulus-webpack-helpers": "^1.0.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-typescript": "^7.15.0",
-    "@types/webpack-env": "^1.16.3",
-    "babel-loader": "^8.2.2",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.4.0",
-    "handlebars": "^4.7.7",
-    "handlebars-loader": "^1.7.1",
-    "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^5.4.0",
-    "prettier": "^2.4.1",
-    "sass": "^1.43.2",
-    "sass-loader": "^12.2.0",
-    "style-loader": "^3.3.0",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.4.4",
-    "webpack": "^5.58.2",
-    "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1",
-    "webpack-merge": "^5.8.0"
-  }
+	"name": "sanical-chat",
+	"version": "1.0.0",
+	"description": "",
+	"private": "true",
+	"scripts": {
+		"start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
+		"build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:cov": "jest --coverage",
+		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+		"prepare": "husky install"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@hotwired/stimulus": "^3.0.1",
+		"@hotwired/stimulus-webpack-helpers": "^1.0.1"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.15.8",
+		"@babel/preset-env": "^7.15.8",
+		"@babel/preset-typescript": "^7.15.0",
+		"@types/jest": "^27.0.3",
+		"@types/webpack-env": "^1.16.3",
+		"@typescript-eslint/eslint-plugin": "^5.4.0",
+		"@typescript-eslint/parser": "^5.4.0",
+		"babel-loader": "^8.2.2",
+		"crel": "^4.2.1",
+		"cross-env": "^7.0.3",
+		"css-loader": "^6.4.0",
+		"eslint": "^8.3.0",
+		"eslint-config-prettier": "^8.3.0",
+		"handlebars": "^4.7.7",
+		"handlebars-loader": "^1.7.1",
+		"html-loader": "^2.1.2",
+		"html-webpack-plugin": "^5.4.0",
+		"husky": "^7.0.0",
+		"jest": "^27.3.1",
+		"mutationobserver-shim": "^0.3.7",
+		"prettier": "^2.4.1",
+		"pretty-quick": "^3.1.2",
+		"sass": "^1.43.2",
+		"sass-loader": "^12.2.0",
+		"style-loader": "^3.3.0",
+		"ts-jest": "^27.0.7",
+		"ts-loader": "^9.2.6",
+		"typescript": "^4.4.4",
+		"webpack": "^5.58.2",
+		"webpack-cli": "^4.9.0",
+		"webpack-dev-server": "^4.3.1",
+		"webpack-merge": "^5.8.0"
+	},
+	"prettier": {
+		"useTabs": true
+	}
 }
